feat(spaces): expose public Spaces read-model and sidebar feed
- Extend Space read-model (showInSidebar, sortOrder, icon, translations)
- New PublicSpaceController: GET /public/spaces (sidebar list, tenant-scoped)
  and GET /public/spaces/{spaceId} (single space)
- Repository: findSidebarSpaces filters ACTIVE + showInSidebar ordered by sortOrder
- Remove obsolete mock controllers (Community/Ecosystem/FirstSteps);
  EntryMockController kept for lightboxes